--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <link rel="stylesheet" href="css/style.css">
+    <style>
+        body {
+            background-image: url('img/study00.gif');
+            background-size: cover;
+            background-repeat: no-repeat;
+        }
+    </style>
+</head>
 <body>
 
-<h1>My First Heading1</h1>
-
+<h1>My First Heading</h1>
 <p>My first paragraph.</p>
 
 </body>
