--- a/index.html
+++ b/index.html
@@ -3,17 +3,51 @@
 <head>
     <link rel="stylesheet" href="css/style.css">
     <style>
+        /* 배경 이미지 스타일 */
         body {
+            margin: 0; /* 바디의 기본 마진 제거 */
+            padding: 0; /* 바디의 기본 패딩 제거 */
             background-image: url('img/study00.gif');
             background-size: cover;
             background-repeat: no-repeat;
+            background-position: center;
+            background-attachment: fixed; /* 배경 이미지를 고정시킴 */
+        }
+
+        /* 반투명한 배경 스타일 */
+        .overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            /* 반투명 검정 배경 */
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 1; /* 다른 콘텐츠 위에 배치 */
+        }
+
+        /* 문구 스타일 */
+        .text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: seashell;
+            font-size: 100px;
+            text-align: center;
+            /* 텍스트를 반투명 배경 위에 배치함 */
+            z-index: 2;
         }
     </style>
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<div class="overlay"></div>
+<div class="text">
+    <p>Welcome to Ysw1mst Space</p>
+</div>
+
+
 
 </body>
 </html>
