--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             color: seashell;
-            font-size: 50px;
+            font-size: 75px;
             text-align: center;
             z-index: 2;
         }
@@ -53,7 +53,7 @@
 
 <div class="overlay"></div>
 <div class="text">
-    <p>Welcome to Ysw1mst Space</p>
+    <p>Welcome to Ysw1m_st Space</p>
 </div>
 
 <div class="footer">
