--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             width: 100%;
             background-color: rgba(0, 0, 0, 0.3);
             color: white;
+            font-size: 12px;
             text-align: center;
-            padding: 10px;
         }
     </style>
 </head>
