--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             position: absolute;
             bottom: 0;
             width: 100%;
-            background-color: rgba(0, 0, 0, 0.3);
+            background-color: rgba(0.1, 0, 0, 0.3);
             color: white;
             font-size: 12px;
             text-align: center;
@@ -57,7 +57,9 @@
 </div>
 
 <div class="footer">
-    <p>Ysw1m_st 2023. 08. 18<br>Design reference To @Inpa Dev
+    <p>Ysw1m_st 2023. 08. 18<br>
+    Contect Adress ysw1mst@naver.com<br>
+    Design reference To @Inpa Dev
 </div>
 
 </body>
