--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             height: 100%;
             background-color: rgba(0, 0, 0, 0.5);
             z-index: 1;
-        }
+            pointer-events: none; /* 추가 */
+    }
 
         /* 문구 스타일 */
         .text {
@@ -47,6 +48,7 @@
             font-size: 12px;
             text-align: center;
         }
+
     </style>
 </head>
 <body>
@@ -63,6 +65,7 @@
 
 <input type="checkbox" id="menuicon">
 <label for="menuicon">
+
     <span></span>
     <span></span>
     <span></span>
