--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <title>Dev Swimming</title>
 <head>
     <link rel="stylesheet" href="css/style.css">
     <style>
@@ -70,6 +71,7 @@
     <span></span>
     <span></span>
 </label>
+    <div class="sidebar"></div>
 
 </body>
 </html>
