--- a/index.html
+++ b/index.html
@@ -1,77 +1,45 @@
 <!DOCTYPE html>
 <html>
     <title>Dev Swimming</title>
+
 <head>
     <link rel="stylesheet" href="css/style.css">
     <style>
-        /* 배경 이미지 스타일 */
         body {
-            margin: 0;
-            padding: 0;
             background-image: url('img/study00.gif');
             background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-            background-attachment: fixed;
         }
-
-        /* 반투명한 배경 스타일 */
-        .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            z-index: 1;
-            pointer-events: none; /* 추가 */
-    }
-
-        /* 문구 스타일 */
-        .text {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: seashell;
-            font-size: 75px;
-            text-align: center;
-            z-index: 2;
-        }
-
-        /* 푸터 스타일 */
-        .footer {
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-            background-color: rgba(0.1, 0, 0, 0.3);
-            color: white;
-            font-size: 12px;
-            text-align: center;
-        }
-
     </style>
 </head>
-<body>
-<div class="overlay"></div>
-<div class="text">
-    <p>Welcome to Ysw1m_st Space</p>
-</div>
+   <body>
+        <script src="javascript/indexmain.js"></script>
+        <div class="overlay"></div>
+        <div class="text" id="firstText">
+            <p>Welcome to Ysw1m_st Space</p>
+        </div>
+        <div class="text" id="secondText">
+            <p>Welcome to Ysw1m_st Space123</p>
+        </div>
+        <div class="text" id="thirdText">
+            <p>Welcome to Ysw1m_st Space456</p>
+        </div>
 
-<div class="footer">
-    <p>Ysw1m_st 2023. 08. 18<br>
-    Contect Adress ysw1mst@naver.com<br>
-    Design reference To @Inpa Dev
-</div>
 
-<input type="checkbox" id="menuicon">
-<label for="menuicon">
+    <div class="footer">
+        <p>Ysw1m_st 2023. 08. 18<br>
+        Contact Address ysw1mst@naver.com<br>
+        Design reference To @Inpa Dev
+        </p>
+    </div>
 
-    <span></span>
-    <span></span>
-    <span></span>
-</label>
+    <input type="checkbox" id="menuicon">
+    <label for="menuicon">
+        <span></span>
+        <span></span>
+        <span></span>
+    </label>
     <div class="sidebar"></div>
+
 
 </body>
 </html>
