--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <p>Welcome to Ysw1m_st Space</p>
         </div>
         <div class="text" id="secondText">
-            <p>Welcome to Ysw1m_st Space123</p>
+            <p>ようこそ! Ysw1m_stの くうかんへ!</p>
         </div>
         <div class="text" id="thirdText">
-            <p>Welcome to Ysw1m_st Space456</p>
+            <p>어서오세요! Ysw1m_st의 블로그입니다!</p>
         </div>
 
 
