--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
         <script src="javascript/indexmain.js"></script>
         <div class="overlay"></div>
         <div class="text" id="firstText">
-            <p>Welcome to Ysw1m_st Space</p>
+            <p>Welcome to <br>
+                Ysw1m_st Space</p>
         </div>
         <div class="text" id="secondText">
-            <p>ようこそ! Ysw1m_stの くうかんへ!</p>
+            <p>ようこそ!<br>
+                Ysw1m_st の<br>
+                くうかんへ!</p>
         </div>
         <div class="text" id="thirdText">
-            <p>어서오세요! Ysw1m_st의 블로그입니다!</p>
+            <p>어서오세요!
+                <br>Ysw1m_st의 블로그입니다!</p>
         </div>
 
 
