--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         body {
             background-image: url('img/study00.gif');
@@ -50,6 +51,17 @@
         <span></span>
     </label>
     <div class="sidebar">
+    <ul>
+        <li><a href="#">소개</a></li>
+        <li><a href="#">HTML</a></li>
+        <li><a href="#">CSS</a></li>
+        <li><a href="#">JAVA SCRIPT</a></li>
+        <li><a href="#">Python</a></li>
+        <li><a href="#">LIFE</a></li>
+        <li><a href="#">Git Hub</a></li>
+        <li><a href="#">Instargram</a></li>
+        <li><a href="#">Guest Book</a></li>
+   </ul>
        </div>
 
 
