--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
     <div class="sidebar">
     <ul>
         <li><a href="#">소개</a></li>
-        <li><a href="#">HTML</a></li>
-        <li><a href="#">CSS</a></li>
-        <li><a href="#">JAVA SCRIPT</a></li>
+        <li><a href="#">HTML / CSS</a></li>
+        <li><a href="#">CS</a></li>
+        <li><a href="#">JAVA / SPRING</a></li>
         <li><a href="#">Python</a></li>
         <li><a href="#">LIFE</a></li>
-        <li><a href="#">Git Hub</a></li>
-        <li><a href="#">Instargram</a></li>
+        <li><a href="https://github.com/Ysw1mst">Git Hub</a></li>
+        <li><a href="https://www.instagram.com/ysw1m_st/">Instargram</a></li>
         <li><a href="#">Guest Book</a></li>
    </ul>
        </div>
