--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         <li><a href="#">CS</a></li>
         <li><a href="#">JAVA / SPRING</a></li>
         <li><a href="#">Python</a></li>
-        <li><a href="#">LIFE</a></li>
-        <li><a href="https://github.com/Ysw1mst">Git Hub</a></li>
-        <li><a href="https://www.instagram.com/ysw1m_st/">Instargram</a></li>
+        <li><a href="https://blog.naver.com/ysw1mst"target="_blank">LIFE</a></li>
+        <li><a href="https://github.com/Ysw1mst"target="_blank">Git Hub</a></li>
+        <li><a href="https://www.instagram.com/ysw1m_st/"target="_blank">Instargram</a></li>
         <li><a href="#">Guest Book</a></li>
    </ul>
        </div>
