--- a/index.html
+++ b/index.html
@@ -15,23 +15,31 @@
    <body>
         <script src="javascript/indexmain.js"></script>
         <div class="overlay"></div>
-        <div class="text" id="secondText">
+        <div class="text" id="firstText">
             <p>Welcome to <br>
                 Ysw1m_st Space!</p>
         </div>
+
+        <div class="text" id="secondText">
+            <p>어서오세요<br>
+                Ysw1m_st<br>
+                블로그 입니다!</p>
+        </div>
+
         <div class="text" id="thirdText">
             <p>ようこそ!<br>
                 Ysw1m_st の<br>
                 くうかんへ!</p>
         </div>
-        <div class="text" id="firstText">
-            <p>어서오세요.
-                <br>Ysw1m_st의 공간입니다.</p>
-        </div>
         <div class="text" id="fourthText">
-            <p>Bienvenidos.
-                <br>Es un espacio de Ysw1m_st.</p>
+            <p>공사중 입니다.<br>
+                It's still in production.<br>
+                ブログ工事中</p>
         </div>
+
+
+
+
 
 
 
@@ -79,7 +87,7 @@ function startAnimation() {
 startAnimation();
 
 
-setInterval(startAnimation, 12010);
+setInterval(startAnimation, 12000);
 
 </script>
 
