--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </label>
     <div class="sidebar">
     <ul>
-        <li><a href="#">소개</a></li>
+        <li><a href="./Blog/Me.html">소개</a></li>
         <li><a href="#">HTML / CSS</a></li>
         <li><a href="#">CS</a></li>
         <li><a href="#">JAVA / SPRING</a></li>
